# BisimilarityGame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_lib.bat  build_lib.sh  main.cpp  pyproject.toml  requirements.txt  setup.py
lib/: CMakeLists.txt  main.cpp  pyproject.toml  setup.py
lib/src/: binding.cpp
lib/src/bisimilarity_checker/: __init__.py
lib/src/petrinets/: petrinet.cpp  petrinet.h  prooftree.cpp  prooftree.h
nets/: big_cycle.pnml  coins.pnml  cyclic.pnml  exclusive.pnml  test.pnml
src/petrinets/: multiset.cpp  multiset.h  petrinet.cpp  petrinet.h  prooftree.cpp  prooftree.h
ui/: here.xml  main.py  main.pyw  main.spec
ui/qtui/: app.py  infowindow.py  mainwindow.py  widgets.py  widgetutils.py
ui/qtui/io/: petri.py  tree.py
ui/stylesheets/: colors_dark.xml  colors_light.xml  table_dark.qml  table_light.qml
ui/ui/parsing/: petri.py
